test_regress/t/t_assert_rep_unsup.out
%Error-UNSUPPORTED: t/t_assert_rep_unsup.v:13:42: Unsupported: consecutive repetition with non-##1 cycle delay
                                                : ... note: In instance 't'
   13 |   assert property (@(posedge clk) a [*2] ##3 b);
      |                                          ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_rep_unsup.v:16:37: Unsupported: standalone consecutive repetition range
                                                : ... note: In instance 't'
   16 |   assert property (@(posedge clk) a [*2:3] |-> 1);
      |                                     ^~
%Error-UNSUPPORTED: t/t_assert_rep_unsup.v:19:42: Unsupported: trailing consecutive repetition range in sequence expression (e.g. a ##1 b[+])
                                                : ... note: In instance 't'
   19 |   assert property (@(posedge clk) b ##1 a[+]);
      |                                          ^~~
%Error-UNSUPPORTED: t/t_assert_rep_unsup.v:24:37: Unsupported: throughout with complex sequence operator
                                                : ... note: In instance 't'
   24 |   assert property (@(posedge clk) a throughout (b[=2]))
      |                                     ^~~~~~~~~~
%Error: Exiting due to
